@@ -15,17 +15,17 @@ package se.anatom.ejbca.admin;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.util.Properties;
 import java.util.regex.Pattern;
 
 import org.ietf.ldap.LDAPDN;
 
 import se.anatom.ejbca.util.passgen.PasswordGeneratorFactory;
+import se.anatom.ejbca.webdist.webconfiguration.LanguageProperties;
 
 /** Class used as an install script of ejbca
  * 
  * @author philip
- * @version $Id: Install.java,v 1.18 2004-11-20 19:54:16 sbailliez Exp $
+ * @version $Id: Install.java,v 1.19 2005-01-16 18:48:38 anatom Exp $
  *
  * The main porpose of this program is to provide easy installment of EJBCA.
  */
@@ -65,7 +65,7 @@ public class Install extends BaseCommand {
 	private Pattern nondigitordot = Pattern.compile("[^0-9\\.]");
 	private Pattern notcomputername = Pattern.compile("[^0-9a-zA-z\\-\\.]");
 	private Pattern nonword = Pattern.compile("\\W");
-	private Properties text; 
+	private LanguageProperties text; 
 	
 	private BufferedReader reader = null;
 	
@@ -74,7 +74,7 @@ public class Install extends BaseCommand {
         super();
 		reader = new BufferedReader(new InputStreamReader(System.in));
 		
-		text = new Properties();
+		text = new LanguageProperties();
 		text.load(this.getClass().getResourceAsStream("/" + "install." + language.toLowerCase() + ".properties"));
 						   
 		if(osstring.equalsIgnoreCase("unix")){
